--- a/race_ethnicity_01/autobio.tex
+++ b/race_ethnicity_01/autobio.tex
@@ -12,5 +12,54 @@
 \begin{document}
   \maketitle
   \doublespacing
-  
+  My personal ethnic background has never been particularly salient in my life.
+  This is especially true as it pertains to language.
+  Superficially, my world has always looked generically White middle-class American.
+  I believe my parents have always put a premium on fitting into that mold, which was not too difficult to do in the fairly homogenous part of South Jersey where I grew up.
+  Of course, the reality was not as generic, but that only became obvious to me later in life.
+
+  I grew up in a seaside town in New Jersey that was not particularly diverse.
+  My neighborhood in particular, which was really the most relevant to me before entering school, was entirely White, Protestant, and squarely middle-class.
+  There were a number of other boys my age in who lived close enough that we could play together regularly.
+  We typically played popular American sports, and at the time, we all had very similar speech patterns.
+  Without any obvious contrasts, it never occurred to me that there might be something different about my background from theirs.
+
+  My family, at least to me, seemed equally uninteresting in terms of ethnicity.
+  However, one grandparent on each side of the family was from the South.
+  My grandfather grew up in Tennessee and Alabama, and this was very clear in his speech.
+  He's been gone some time now, but to this day, I can still hear him saying, ``I'll tell you what,'' with a monophthongized \emph{I'll} [ɑːl] and a distinctive intonation.
+  This idea of being southern or even that these sort of speech patterns were southern never even occurred to me, though.
+  In part, this is because my grandmother, who spent her whole life in South Jersey, seemed to speak just like her husband.
+  It turns out that, at one time, many of the linguistic features common in my area of Jersey resemble those of the South.
+  For me, as a young kid, southern-sounding speech was indexed more as ``old person English.''
+
+  The other side, my father's side, was similar in a lot of ways.
+  My grandmother was a distinctly Cajun woman from Louisiana.
+  She spent most of her life there, and although I didn't find out until much later, her first and primary language was French until she left the state.
+  Likewise, my oldest aunt didn't speak English until she started school, which explains why she always sounded much more like my grandmother in English than my other aunts.
+  While Cajun English is most definitely distinct from other southern varieties, to me, this was just an extension of old person English.
+  As for my grandfather, I don't remember what he sounded like, but he was the local New Jerseyian of the pair.
+
+  While my parents naturally picked up some of the features of the way my grandparents spoke, it was not in particularly noticeable ways.
+  My father, in particular, wanted to distance himself from his impoverished Cajun background, and so emphasized his Scottish ancestry from his father's side whenever ethnic identity came up.
+  My mother, while not having a negative relationship with her upbringing, did much the same.
+
+  I spent a lot of time with my cousins when I was younger, and we would pick up lexical features of African-American English that we heard from hip-hop groups coming out of Philadelphia.
+  It cool to use words like \emph{bad} `good', though I didn't associate these with African-American identity \emph{per se}, perhaps because they were distant group in my White region of Jersey.
+
+  I left New Jersey in my early 20s and have such lived in various parts of the country and even Canada.
+  These experiences have made personal identity and ethnicity much more salient issues for me.
+  It became fun to point out to people that I grew up saying [wʊ.ɾəɹ] \emph{water} and referring to subs as \emph{hoagies}.
+  These simple things didn't feel like they said anything about who I was until I wasn't where I came from anymore.
+
+  When I moved to New Orleans, it was in part because I was interested in my family's background, which was mostly hidden from me when I was younger.
+  It was then that I learned that my grandmother spoke French, and then that I started to embrace the southern aspects of my identity.
+  The southern aspects had always been there, but they were so subtle that I didn't notice them myself.
+  For instance, a friend of mine once asked me why I suddenly sounded southern, and I then realized that in certain contexts, I channeled my Alabamaian grandfather.
+  So, I took it upon myself to learn Louisiana French and immerse myself in all things Louisiana, which has become a big part of who I am and part of my linguistic repertoire.
+  There is always a balancing act, though: I am not Cajun, even if I know more about Cajun culture than many of those who definitively are Cajun, and I'm not southern even though I've spent 6 years in South and grew up surrounded by southern grandparents.
+  I can exploit parts of my southern linguistic repertoire while in the south, particularly French, though only to subtle degrees for fear of seeming inauthentic.
+  I certainly can't exploit those parts with my friends in New Jersey, although it's okay with my family.
+  Ironically, aspects of my speech that would place me as being from South Jersey now feel more performative, as well, as I bought into the educational system's concept of correct speech more than most from the area.
+  In a way, my ethnicity feels like something that I draw on at times in my language, but not something that I necessarily live.
 \end{document}
