--- a/fr_01/fr_01.tex
+++ b/fr_01/fr_01.tex
@@ -42,18 +42,33 @@
   }
 
   \section{Introduction}
-    % There are a number of interrogative structures
-    % Objective: Compare the variation in the use of these structures between native- and non-native speakers
-    % Specific research question: "Do advanced speakers of French interlanguage differ from NS in their use of interrogative structures?"
-      % If so, do NNSs prefer more formal structures?
-    % Expectations: There will be a difference and NNSs will prefer more formal structures
-      % Dewaele (1992) found just this for ne deletion among Flemish students
+    \begin{frame}
+      \begin{block}{Objectif}
+        Comparer les interrogatives utilisées par les locuteurs natifs (NS) contre non-natifs (NNS)
+      \end{block}
+      \begin{block}{Question de recherche}
+        «Les locuteurs avancés du français diffèrent-ils des NS dans leurs usages des structures interrogatives?»
+        \begin{itemize}
+          \item Si c'est le cas: Les NNS préfèrent-ils les structures plus formelles?
+        \end{itemize}
+      \end{block}
+    \end{frame}
+
+    \begin{frame}
+      \begin{block}{Attentes}
+        Il y aura une différence entre les NS et les NNS, et
+        \begin{itemize}
+          \item Les NNS préféreront les structures plus formelles
+        \end{itemize}
+        C'est ce que Dewaele (1992) a trouvé pour ce qui concerne l'effacement du \emph{ne} parmi des étudiants flamands
+      \end{block}
+    \end{frame}
 
     \begin{frame}{Variables}
       \begin{block}{Deux formes générales}
         \begin{itemize}
-          \item Interrogatives totales:
-          \item Interrogatives partielles:
+          \item Interrogatives totales (YNQ): Cela cherche une décision
+          \item Interrogatives partielles (WHQ): Cela cherche des informations
         \end{itemize}
       \end{block}
       \begin{columns}
@@ -64,50 +79,82 @@
       \end{columns}
     \end{frame}
 
-    % With this many options, there's bound to be variability
-      % Coveney (1996) found a range of variation throughout 10 corpora
-      % In Quebec
-        % Lyster (1996) found preference for inversion (58.4%)
-          % Counted -ti structures as inversion: "Je peux-ti t'aider?"
-        % Lightbrown (1980) and Lightbrown & d'Anglejean (1985) found the opposite
-    % Factors
-      % Prescriptive view
-        % Wagner & Pinchon (1962) and Grevisse (1980) give four level hierarchy for formality
-          % Careful style: [V-CL], [QV-CL], [QV-NP]
-            % i.e. inversion
-          % Neutral (but inappropriate for writing): [ESV], [QESV]
-            % i.e. est-ce que
-          % Colloquial: [SV], [SVQ]
-          % Working-class (and incorrect): [QSV]
-          % Not set in stone: "Pourquoi veux-tu qu'on parte?" is not formal (Huot 1997)
-      % Descriptive view
-        % Coveney (1996) found several, though the functions of questions in his corpus was far broader
-          % Dewaele's questions are essentially limited to requests for info, opinions, and topic introductions
-          % Found almost no inversion
-          % Pragmatic factors for YNQs
-          % Expectation of an answer for ESVs
-          % Less informative subjects and verbs yielded more SVGs
-          % Men used more QSV than women
+    \begin{frame}{Variabilité}
+      \begin{block}{}
+        Coveney (1996) a trouvé un éventail de variabilité dans 10 corpus
+      \end{block}
+      \begin{block}{Au Québec}
+        Lightbrown (1980) et Lightbrown \& d'Anglejean (1985) ont trouvé une préférence pour les structures non-inverties
+        \begin{itemize}
+          \item Lyster (1996) a trouvé l'inverse
+          \item Il a considéré des inversions les structures avec \emph{-ti}:
+          \item «Je peux-ti t'aider?»
+        \end{itemize}
+      \end{block}
+    \end{frame}
 
-    % YNQs are more frequent than WHQs (Gadet 1989; Coveney 1996)
-      % Goes on about this for a bit, but it seems beside the point for the actual study
+    \begin{frame}{Facteurs prescriptifs}
+      \begin{block}{Une hiérarchie de formalité (Grevisse 1980; Wagner \& Pinchon 1962)}
+        \begin{itemize}
+          \item Style formel: [V-CL], [QV-CL], [QV-NP] (l'inversion)
+          \item Neutre mais inapproprié dans l'écriture: [ESV], [QESV] (\emph{est-ce que})
+          \item Familier: [SV], [SVQ]
+          \item Classe ouvrière et «incorrect»: [QSV]
+        \end{itemize}
+      \end{block}
+      \begin{block}{Il y a des exceptions}
+        «Pourquoi veux-tu qu'on parte?» n'est pas formel (Huot 1997)
+      \end{block}
+    \end{frame}
 
-  \section{Methode}
-    % Participants (N = 20)
-      % Students in the French Department at University of London
-      % NS: N = 5; NNS: N = 15
-      % 9 women, 11 men
-      % 20-60 years old
-    % Data gathering
-      % Use questionnaires to get biographical data from speakers
-        % Gender, age, time spent in France, other languages, profession, etc.
-      % Put into pairs and told to interview each other
-        % Half mixed and half same gender
-        % 2 one hour sessions, switching interviewer every 15 minutes
-      % Resulting corpus of 25,068 words
+    \begin{frame}{Facteurs descriptifs}
+      \begin{block}{Dans Coveney (1996)}
+        \begin{itemize}
+          \item Les YNQ: C'est des facteurs pragmatiques
+          \item Les ESV: Quand on attend une réponse
+          \item Les SVQ: Quand le sujet ou le verbe porte moins d'informations
+          \item Les QSV: C'est les hommes qui les préfèrent plus que les femmes
+        \end{itemize}
+      \end{block}
+      \begin{alertblock}{}
+        Les interrogatives dans Coveney (1996) avaient plus de fonctions
+      \end{alertblock}
+    \end{frame}
+
+  \section{Méthode}
+    \begin{frame}{Participants}
+      \begin{block}{}
+        \begin{itemize}
+          \item $N = 20$
+          \item 5 NS, 15 NNS
+          \item 9 femmes, 11 hommes
+          \item âgés de 20 à 60 ans
+        \end{itemize}
+      \end{block}
+      \begin{block}{}
+        Tous étaient des étudiants du département de français à l'Université de Londres
+      \end{block}
+    \end{frame}
+
+    \begin{frame}{Collecte de données}
+      \begin{block}{Questionnaires pour obtenir des informations biographiques}
+        Genre, âge, temps passé en France, autres langues, profession, etc.
+      \end{block}
+      \begin{block}{Interviews}
+        Regroupés en pairs
+        \begin{itemize}
+          \item Moitié les mêmes genres, moitié mixtes
+          \item Deux séances de une heure chacune
+          \item Un participant a interviewé l'autre pendant 15 minutes avant d'inverser les rôles
+        \end{itemize}
+      \end{block}
+      \begin{block}{}
+        Corpus total: 25068 mots
+      \end{block}
+    \end{frame}
 
   \section{Resultats}
-    \begin{frame}[t]{Comparaison avec d'anciennes études}
+    \begin{frame}[t]{Comparaison avec des études antérieures}
       \begin{columns}
         \column{0.5\linewidth}
           \includegraphics[scale=0.32]{gadet_coveney.jpg}
@@ -117,7 +164,7 @@
     \end{frame}
 
     \begin{frame}{Pourquoi plus d'inversion?}
-      \begin{block}{Une difference de contexte}
+      \begin{block}{Une différence de contexte}
         \begin{itemize}
           \item Coveney: A un camp de vacances
           \item Gadet: Des amis sur le téléphone
@@ -148,7 +195,7 @@
       \end{columns}
     \end{frame}
 
-    \begin{frame}[t]{Facteurs}
+    \begin{frame}[t]{Facteurs verbaux et de temporels}
       \begin{columns}
         \column{0.47\linewidth}
           \begin{minipage}[t][0.6\textheight]{\linewidth}
@@ -185,22 +232,35 @@
       \end{block}
     \end{frame}
 
-    \begin{frame}{Facteurs}
+    \begin{frame}{Facteurs pragmatiques}
       \begin{block}{}
         Presque toutes les inversions [V-CL] et [QV-CL] ont impliqué de nouveaux sujets (95\%)
       \end{block}
       \includegraphics[scale=0.6]{inversion.jpg}
     \end{frame}
 
-    \begin{frame}{Facteurs}
-      % Possible influence from English
-        % NNSs avoid QSV but not SV
-          % Dewaele supposes it has to do with English allowing SV but not QSV
-        % NNSs use more QV-CL, familiar from English
+    \begin{frame}{Facteurs langagiers}
+      \begin{block}{}
+        \begin{itemize}
+          \item Les NNS évitent les [QSV] mais pas les [SV]
+          \item Les NNS utilisent plus de [QV-CL]
+        \end{itemize}
+      \end{block}
+      \begin{block}{Selon Dewaele, c'est une influence possible de l'anglais}
+        \begin{itemize}
+          \item L'anglais permet [SV] mais pas [QSV]
+          \item {[}QV-CL] existe en anglais
+        \end{itemize}
+      \end{block}
     \end{frame}
 
   \section{Conclusion}
-    % The only significant difference between NNSs and NSs was for WHQs
-      % NNSs used more formal variants
-    % Maybe mention his conclusion that inversions were just generally more common in his corpus
+    \begin{frame}{Significations et remarques}
+      \begin{block}{Pour les WHQ uniquement}
+        Les NNS utilisent des variantes plus formelles que les NS
+      \end{block}
+      \begin{block}{}
+        Les inversions étaient plus fréquent que dans les études antérieures
+      \end{block}
+    \end{frame}
 \end{document}
